<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="6"
                android:gravity="center"
                android:text="        Create Event"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <ImageButton
                android:id="@+id/btnSubmit"
                android:layout_width="63dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/check"
                android:onClick="submitAd"
                android:padding="2dp"
                app:layout_constraintRight_toRightOf="@id/title" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    android:clipToPadding="false"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etAdName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:ems="10"
                            android:gravity="top"
                            android:hint="@string/ad_name"
                            android:inputType="textPersonName"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/etAdDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:ems="10"
                            android:gravity="bottom"
                            android:hint="@string/ad_description"
                            android:inputType="textMultiLine"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/etAdName" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView2"
                                style="@style/adCreationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Level: "
                                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                            <RatingBar
                                android:id="@+id/rbSetLevel"
                                style="@style/Widget.AppCompat.RatingBar.Indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginLeft="35dp"
                                android:clickable="true"
                                android:isIndicator="false"
                                android:max="6"
                                android:numStars="6"
                                android:progress="1"
                                android:stepSize="1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvLevelDisp"
                            style="@style/adCreationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="TextView"
                            android:visibility="gone" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTagsOverview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="Pick a few tags to describe your event!" />

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:isScrollContainer="true"
                                android:orientation="horizontal"
                                android:scrollbars="horizontal">

                                <androidx.emoji.widget.EmojiButton
                                    android:id="@+id/sports"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/tag_toggle"
                                    android:tag="sports"
                                    android:text="Button" />

                                <androidx.emoji.widget.EmojiButton
                                    android:id="@+id/food"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/tag_toggle"
                                    android:tag="food"
                                    android:text="Button" />

                                <androidx.emoji.widget.EmojiButton
                                    android:id="@+id/arts"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/tag_toggle"
                                    android:tag="arts"
                                    android:text="Button" />

                                <androidx.emoji.widget.EmojiButton
                                    android:id="@+id/holiday"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/tag_toggle"
                                    android:tag="holiday"
                                    android:text="Button" />

                                <androidx.emoji.widget.EmojiButton
                                    android:id="@+id/music"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/tag_toggle"
                                    android:tag="music"
                                    android:text="Button" />

                                <androidx.emoji.widget.EmojiButton
                                    android:id="@+id/ageRestrictive"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/tag_toggle"
                                    android:tag="age"
                                    android:text="Button" />
                            </LinearLayout>
                        </HorizontalScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDateDisplay"
                            style="@style/adCreationText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:hint="@string/ad_date" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvTimeDisplay"
                                style="@style/adCreationText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:hint="@string/start_time" />

                            <TextView
                                android:id="@+id/textView"
                                style="@style/adCreationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="-" />

                            <TextView
                                android:id="@+id/tvTimeDisplay2"
                                style="@style/adCreationText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:gravity="right|left"
                                android:hint="@string/end_time" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <fragment
                            android:id="@+id/autocomplete_fragment"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="67dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:onClick="uploadPhoto"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/add_image" />

                    <ViewFlipper
                        android:id="@+id/viewFlipper"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:autoStart="true"
                        android:flipInterval="2000"
                        android:visibility="gone"></ViewFlipper>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>